fix: update UI to align with Figma design

--- a/src/release-notes/ReleaseNotes.scss
+++ b/src/release-notes/ReleaseNotes.scss
@@ -59,6 +59,10 @@
         color: var(--pgn-color-black);
     }
 
+    .sub-header {
+        border-bottom: 2px solid black;
+    }
+
     .pgn__icon {
         max-width: 20px !important;
         max-height: 20px !important;
@@ -135,6 +139,10 @@
     margin-top: 4px;
 }
 
+.tooltip.scheduled-tooltip .tooltip-inner {
+    max-width: 350px !important;
+}
+
 .new-post-button .pgn__icon {
     color: inherit;
 }
@@ -155,4 +163,8 @@
 
 .sub-header-title {
     font-size: 40px;
+}
+
+.pgn__modal.pgn__modal-xl.pgn__modal-default {
+    max-height: unset;
 }
